[package]
name = "NearFT_for_UnityApi"
version = "0.1.0"
edition = "2021"
authors = ["Eh1Ka6"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
